fix: prevent long notification alert overflow

--- a/resources/less/system/_alert.less
+++ b/resources/less/system/_alert.less
@@ -15,6 +15,10 @@
   line-height: var(--line-height-default);
 }
 
+.alert__message {
+  min-width: 0;
+}
+
 .alert__actions {
   display: flex;
   align-items: center;
